Now progtest kill programs that don't finished.